--- a/weixin.css
+++ b/weixin.css
@@ -1,3 +1,3 @@
 .impowerBox .qrcode{width:85%;}
-.impowerBox .info{display:none;}
+.impowerBox .title{display:none;}
 .impowerBox .status{text_align:center;}
